--- a/教案.md
+++ b/教案.md
@@ -53,15 +53,16 @@
 
 ```
 教学文件/
-├── 教案.md                 ← 本文件
-├── PPT/                    ← PPT文件夹（按下方指引制作）
-├── step1_window_ship.py    ← Step 1 代码
-├── step2_movement.py       ← Step 2 代码
-├── step3_asteroid.py       ← Step 3 代码
-├── step4_collision.py      ← Step 4 代码
-├── step5_multiple.py       ← Step 5 代码
-├── step6_score.py          ← Step 6 代码
-└── meteor_final.py         ← 完整版代码
+├── 教案.md                      ← 本文件
+├── PPT/                         ← PPT文件夹（按下方指引制作）
+├── step1_window_ship.py         ← Step 1 代码
+├── step2_movement.py            ← Step 2 代码
+├── step3_asteroid.py            ← Step 3 代码
+├── step4_collision.py           ← Step 4 代码
+├── step5_multiple.py            ← Step 5 代码
+├── step6_score.py               ← Step 6 代码
+├── step7_bonus_shooting.py      ← Bonus: 射击+平滑移动（进度快的同学）
+└── meteor_final.py              ← 完整版代码
 ```
 
 ---
@@ -1177,9 +1178,9 @@ def move_asteroids():
 │     • 添加生命系统（3条命）                                  │
 │     • 添加陨石的不同大小                                     │
 │                                                             │
-│  ⭐⭐⭐ 挑战：                                               │
-│     • 添加射击功能                                           │
-│     • 添加护盾道具                                           │
+│  ⭐⭐⭐ Bonus 射击+平滑移动（step7_bonus_shooting.py）        │
+│     • 平滑移动：速度、加速度、摩擦力、onkeyrelease           │
+│     • 射击系统：冷却时间、列表切片 [:]                       │
 │                                                             │
 │  代码在 meteor_final.py，有注释提示！                        │
 │                                                             │
